# mazeforge

./: .gitignore  LICENSE  README.md  compile.sh  mazeforge.py  pyproject.toml  setup.py  test.py
.github/workflows/: build.yml
cpython_rust_test/: Cargo.toml  test.py
cpython_rust_test/.cargo/: config.toml
cpython_rust_test/src/: lib.rs
maturin_test/: Cargo.toml  pyproject.toml
maturin_test/src/: lib.rs
rust_pyo3_testing/: Cargo.toml  build.command  test.py
rust_pyo3_testing/.cargo/: config.toml
rust_pyo3_testing/src/: lib.rs
src/mazeforge/: __init__.py  __main__.py  compile.sh  generator.py  main.c  maze.py
src/mazeforge.egg-info/: PKG-INFO  SOURCES.txt
src/mazeforge/core/: loader.py
src/mazeforge/core/platform/macos/arm/: libmaze.dylib
src/mazeforge/core/platform/macos/x86_64/: libmaze.dylib
src/mazeforge/core/scripts/: bst.c  bst.h  bst_example.c  generator.c
src/mazeforge/lib/macos/arm/: libmazeforgeutil.dylib
src/mazeforge/lib/macos/x86_64/: libmazeforgeutil.dylib
src/mazeforge/rust_tests/rust/: Cargo.toml
src/mazeforge/rust_tests/rust/src/: lib.rs
tests/: grid_generation.py  test_generator.py
