[package]
name = "rust_pyo3_testing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.2", features = ["extension-module", "abi3-py37"] }

[target.x86_64-unknown-linux-gnu]
linker = "gcc"

[target.'cfg(all(target_arch = "x86_64", target_os = "linux"))']
linker = "gcc"

[target.i686-unknown-linux-gnu]
[target.x86_64-apple-darwin]
[target.x86_64-pc-windows-msvc]
[target.i686-pc-windows-msvc]
[target.x86_64-pc-windows-gnu]
[target.i686-pc-windows-gnu]
[target.x86_64-unknown-freebsd]
[target.i686-unknown-freebsd]
[target.x86_64-unknown-netbsd]
[target.i686-unknown-netbsd]
[target.aarch64-unknown-linux-gnu]
[target.armv7-unknown-linux-gnueabihf]
[target.wasm32-unknown-unknown]
